docs(project): record versioned transfer verification