@@ -3,16 +3,16 @@
 - **Test type:** Integration
 - **Requirement IDs:** `AUTH-001`, `AUTH-004`, `AUTH-006`, `AUTH-007`, `AUTH-009`, `AUTH-011`, `PRJ-017`–`PRJ-022`, `DB-003`, `DB-006`, `DB-007`, `DB-011`, `DB-012`
 - **Scenario IDs:** `AC-AUTH-001`, `AC-AUTH-007`, `AC-AUTH-009`, `AC-AUTH-010`, `AC-PRJ-010`–`AC-PRJ-013`
-- **Test class/method:** `ProjectInvitationExitIntegrationTest` (route, terminal, matrix, and stale-ID cases), `ProjectLifecycleLockIntegrationTest#concurrentExitApprovalAndTransferLeaveOnlyAReadyOrPendingState`, `ProjectControllerTest#nestedWorkflowPostsPassTheirRouteProjectToEveryMutationBoundary` and `#projectListExposesPageTwoContinuationForMoreThanOneBoundedPage`, and `ProjectQueryIndexIntegrationTest#roleScopedProjectListsUseBoundedPagesAndEligibleDashboardTotals`
-- **Implementation commit:** `ab01a400d0e165f7f7605a234e6558bbe01e6609`
+- **Test class/method:** `ProjectInvitationExitIntegrationTest` (route, terminal, matrix, stale-ID, and stale-version cases), `ProjectLifecycleLockIntegrationTest#concurrentExitApprovalAndTransferLeaveOnlyAReadyOrPendingState`, `ProjectControllerTest#nestedWorkflowPostsPassTheirRouteProjectToEveryMutationBoundary`, `#projectListExposesPageTwoContinuationForMoreThanOneBoundedPage`, `#exitTransferBindsCompleteTaskVersionPairsAndPassesThemToProjectService`, `#exitTransferRejectsAnIncompleteTaskVersionMapBeforeCallingProjectService`, and `#staleExitTransferReturnsSafeConflictWithoutProjectRedirect`, and `ProjectQueryIndexIntegrationTest#roleScopedProjectListsUseBoundedPagesAndEligibleDashboardTotals`
+- **Implementation commit:** `7f357e1e65e0491f309afbe78572029044cfeff0` (on merged Task producer `a6261eb0ccad46ee6eac028d7202b5c06967fe13` at `1b3b1df843ed253e5a5fabbdf82d1c9af6e390cf`)
 
 ## Protected behavior
 
-Project mutations keep authorization and state checks inside the locked Project boundary. Every nested invitation/exit POST binds both the route Project and nested identifier before mutation; a cross-Project or stale identifier fails without protected-record disclosure or state change. A terminal exit request cannot transfer Tasks even when a new pending request for the same target makes the source membership eligible. The authorization matrix covers the scoped Project role/context/operation denials and asserts unchanged retained state. Admin, owning Mentor, and Intern Project-list reads use real repository slices with a bounded page of 50, stable continuation links, and representative PostgreSQL plans. Dashboard active-Project totals use dedicated aggregate queries, while the Mentor distinct-member total starts from the complete Project-owned scalar ID set and applies the established public `AccountService#isEligibleIntern` boundary rather than counting the first page or joining Account persistence. Existing Project membership, invitation/exit queue, leadership, and Task-progress/transfer index checks remain intact.
+Project mutations keep authorization and state checks inside the locked Project boundary. Every nested invitation/exit POST binds both the route Project and nested identifier before mutation; a cross-Project or stale identifier fails without protected-record disclosure or state change. A terminal exit request cannot transfer Tasks even when a new pending request for the same target makes the source membership eligible. The exit-transfer POST now requires one complete repeated `taskVersions=taskId:version` pair for every selected Task, and the Project service passes an immutable exact-key map into the reviewed six-argument Task transfer contract. A stale pair becomes the Task-owned safe HTTP 409 boundary before assignment, request, or notification mutation. The authorization matrix covers the scoped Project role/context/operation denials and asserts unchanged retained state. Admin, owning Mentor, and Intern Project-list reads use real repository slices with a bounded page of 50, stable continuation links, and representative PostgreSQL plans. Dashboard active-Project totals use dedicated aggregate queries, while the Mentor distinct-member total starts from the complete Project-owned scalar ID set and applies the established public `AccountService#isEligibleIntern` boundary rather than counting the first page or joining Account persistence. Existing Project membership, invitation/exit queue, leadership, and Task-progress/transfer index checks remain intact.
 
 ## Test method
 
-The tests create real PostgreSQL 18.4 account, internship, Project, membership, invitation, exit-request, leadership, and Task rows. Route-binding regressions use an existing invitation or exit request owned by Project B while supplying Project A, then assert generic access denial, unchanged terminal/request state, and unchanged notification count. The terminal regression rejects request R1, creates pending request R2 for the same target, submits R1 through the six-argument transfer boundary, and checks Task assignment plus both request statuses. The AC-AUTH-009 table-driven test covers Admin, owning/non-owning Mentor, current/former Leader, ordinary member, requester, target, wrong invitee, removed member, completed Project, and unrelated contexts; every denied operation compares a public database-state snapshot before and after. Race tests run service calls in independent `TransactionTemplate` transactions with latches and PostgreSQL row-lock probes. The list-plan test creates 51 active Projects through `ProjectService`, each with an eligible Leader and a non-Leader whose internship is then completed with no unfinished Tasks; it verifies that all 51 membership intervals remain current while page one/page two reachability for Admin, Mentor, and Leader Intern, complete `51` active-Project totals, and the Mentor distinct eligible-member total of `1` are asserted. It analyzes the relevant tables and explains the Admin, Mentor, and Intern SQL shapes with sequential scans disabled only for deterministic capability proof. The MVC test requests `page=2` and verifies the route passes zero-based page one to the service and renders a previous continuation link.
+The tests create real PostgreSQL 18.4 account, internship, Project, membership, invitation, exit-request, leadership, and Task rows. Route-binding regressions use an existing invitation or exit request owned by Project B while supplying Project A, then assert generic access denial, unchanged terminal/request state, and unchanged notification count. The terminal regression rejects request R1, creates pending request R2 for the same target, submits R1 through the six-argument transfer boundary, and checks Task assignment plus both request statuses. The new MVC tests post repeated `taskVersions` pairs, reject missing/extra/duplicate or malformed coverage before calling `ProjectService`, and map a Task-owned conflict to the safe generic 409 response. The PostgreSQL stale-version regression observes Task version `0`, advances the stored version to `1`, submits the stale pair through the route-bound Project service, and asserts the target assignment, current version, pending request, and notification count are unchanged. The AC-AUTH-009 table-driven test covers Admin, owning/non-owning Mentor, current/former Leader, ordinary member, requester, target, wrong invitee, removed member, completed Project, and unrelated contexts; every denied operation compares a public database-state snapshot before and after. Race tests run service calls in independent `TransactionTemplate` transactions with latches and PostgreSQL row-lock probes. The list-plan test creates 51 active Projects through `ProjectService`, each with an eligible Leader and a non-Leader whose internship is then completed with no unfinished Tasks; it verifies that all 51 membership intervals remain current while page one/page two reachability for Admin, Mentor, and Leader Intern, complete `51` active-Project totals, and the Mentor distinct eligible-member total of `1` are asserted. It analyzes the relevant tables and explains the Admin, Mentor, and Intern SQL shapes with sequential scans disabled only for deterministic capability proof. The MVC test requests `page=2` and verifies the route passes zero-based page one to the service and renders a previous continuation link.
 
 ## Hand-derived expected result
 
@@ -20,6 +20,8 @@ The tests create real PostgreSQL 18.4 account, internship, Project, membership, 
 - A terminal R1 followed by pending R2 for the same target rejects a stale R1 transfer with `ProjectRuleViolationException`; the Task remains assigned and R1/R2 remain `REJECTED`/`PENDING`.
 - The AC-AUTH-009 denial rows return the expected access exception without changing Project status, membership intervals, leadership terms, invitation/exit statuses, Task assignment/status, or Project notifications.
 - Concurrent exit transfer and approval use the six-argument request-bound service API and leave a valid ready/pending outcome without a partial transfer.
+- A transfer POST with selected IDs `{101,102}` and pairs `{101:4,102:9}` reaches ProjectService as an immutable map; a missing pair is rejected before the service call, and a stale Task version yields HTTP 409 with only safe reload copy.
+- In PostgreSQL, a stale transfer leaves the target assignee, Task version, pending exit request, and notification count unchanged.
 - Admin, owning Mentor, and Intern list paths each return at most 50 rows. Representative PostgreSQL plans contain a `Limit`; the Mentor path uses `ix_projects_mentor_status` and the Intern path uses an index scan for the membership join. No speculative index is introduced.
 - With 51 active visible Projects, each role reaches a one-row page two and the MVC route renders a stable previous link. Admin, Mentor, and Intern dashboard active-Project totals are `51`; a completed non-Leader retains all 51 current membership intervals but is excluded by the public eligibility boundary, leaving the Mentor distinct eligible-member total at `1`, independent of the first-page row count.
 - Existing Project/membership/invitation/exit/Task indexes are present, and PostgreSQL selects the established Task progress and transfer indexes.
@@ -107,7 +109,46 @@ Finished at: 2026-08-22T15:09:15+07:00
 
 This PostgreSQL RED proved that counting the complete current-membership set without the established Account eligibility boundary included a non-Leader Intern after `completeInternship` retained its membership interval. The temporary standalone fixture was consolidated into the 51-Project page-two test so the regression and complete-total proof share one isolated database fixture.
 
+### Versioned Task transfer consumer boundary
+
+**Command**
+
+```text
+JAVA_HOME=/opt/homebrew/opt/openjdk@25 PATH=/opt/homebrew/opt/openjdk@25/bin:/usr/bin:/bin ./mvnw -Dtest='ProjectControllerTest#exitTransferBindsCompleteTaskVersionPairsAndPassesThemToProjectService,ProjectControllerTest#exitTransferRejectsAnIncompleteTaskVersionMapBeforeCallingProjectService,ProjectControllerTest#staleExitTransferReturnsSafeConflictWithoutProjectRedirect,ProjectInvitationExitIntegrationTest#staleExitTransferVersionReturnsConflictWithoutPartialTaskOrRequestMutation' test
+```
+
+**Observed result**
+
+```text
+Test compilation reported 3 errors: no suitable method found for ProjectService.transferTasks(long,long,long,long,Set<Long>,Map<Long,Long>,long) at the two controller verifications and the PostgreSQL regression.
+BUILD FAILURE
+Finished at: 2026-08-22T15:51:56+07:00
+```
+
+This RED was the missing Project consumer boundary after the exact reviewed Task producer merge; it did not depend on a fixture, database, or browser failure.
+
 ## GREEN
+
+### Versioned Task transfer consumer
+
+**Controller-focused command and result**
+
+```text
+JAVA_HOME=/opt/homebrew/opt/openjdk@25 PATH=/opt/homebrew/opt/openjdk@25/bin:/usr/bin:/bin ./mvnw -Dtest='ProjectControllerTest#exitTransferBindsCompleteTaskVersionPairsAndPassesThemToProjectService,ProjectControllerTest#exitTransferRejectsAnIncompleteTaskVersionMapBeforeCallingProjectService,ProjectControllerTest#staleExitTransferReturnsSafeConflictWithoutProjectRedirect' -DargLine='-javaagent:/Users/sechmachine/.m2/repository/net/bytebuddy/byte-buddy-agent/1.18.10/byte-buddy-agent-1.18.10.jar' test
+Tests run: 3, Failures: 0, Errors: 0, Skipped: 0
+BUILD SUCCESS
+Finished at: 2026-08-22T15:54:45+07:00
+```
+
+**PostgreSQL stale-transfer command and result**
+
+```text
+JAVA_HOME=/opt/homebrew/opt/openjdk@25 PATH=/opt/homebrew/opt/openjdk@25/bin:/usr/bin:/bin DOCKER_HOST=unix:///Users/sechmachine/.orbstack/run/docker.sock ./mvnw -Dtest='ProjectInvitationExitIntegrationTest#staleExitTransferVersionReturnsConflictWithoutPartialTaskOrRequestMutation' -DargLine='-javaagent:/Users/sechmachine/.m2/repository/net/bytebuddy/byte-buddy-agent/1.18.10/byte-buddy-agent-1.18.10.jar' test
+Tests run: 1, Failures: 0, Errors: 0, Skipped: 0, BUILD SUCCESS
+PostgreSQL 18.4 Testcontainers; finished at 2026-08-22T15:55:06+07:00.
+```
+
+The controller slice also passed with the existing Byte Buddy agent after the initial Java 25 self-attach attempt was correctly characterized as an environment limitation.
 
 **Command and result**
 
@@ -138,20 +179,46 @@ BUILD SUCCESS
 Finished at: 2026-08-22T15:17:37+07:00
 ```
 
+### Post-merge affected Project/Task suite
+
+```text
+JAVA_HOME=/opt/homebrew/opt/openjdk@25 PATH=/opt/homebrew/opt/openjdk@25/bin:/usr/bin:/bin DOCKER_HOST=unix:///Users/sechmachine/.orbstack/run/docker.sock ./mvnw -Dtest='ProjectServiceIntegrationTest,ProjectInvitationExitIntegrationTest,ProjectLifecycleLockIntegrationTest,ProjectEntityTest,ProjectControllerTest,Iteration2ProjectWorkflowWebTest,ProjectTaskMutationContextTest,ProjectPersistenceStructureTest,ProjectQueryIndexIntegrationTest,TaskControllerTest,Iteration2TaskWorkflowWebTest,TaskCreationIntegrationTest,TaskDashboardServiceTest,TaskDomainRulesTest,TaskMutationBoundaryTest,TaskPersistenceStructureTest,TaskProjectQueryTest,TaskQueryServiceTest,TaskTransferServiceTest,TaskWorkLogIntegrationTest,TaskWorkLogRulesTest' -DargLine='-javaagent:/Users/sechmachine/.m2/repository/net/bytebuddy/byte-buddy-agent/1.18.10/byte-buddy-agent-1.18.10.jar' test
+Tests run: 206, Failures: 0, Errors: 0, Skipped: 0
+BUILD SUCCESS; PostgreSQL 18.4 Testcontainers and Java 25.0.4.
+Finished at 2026-08-22T15:58:57+07:00.
+```
+
+### Post-merge architecture and static gates
+
+```text
+JAVA_HOME=/opt/homebrew/opt/openjdk@25 PATH=/opt/homebrew/opt/openjdk@25/bin:/usr/bin:/bin ./mvnw -Dtest='LayerStructureTest,ProjectPersistenceStructureTest,TaskPersistenceStructureTest' -DargLine='-javaagent:/Users/sechmachine/.m2/repository/net/bytebuddy/byte-buddy-agent/1.18.10/byte-buddy-agent-1.18.10.jar' test
+Tests run: 7, Failures: 0, Errors: 0, Skipped: 0
+BUILD SUCCESS; finished at 2026-08-22T15:59:06+07:00.
+
+JAVA_HOME=/opt/homebrew/opt/openjdk@25 PATH=/opt/homebrew/opt/openjdk@25/bin:/usr/bin:/bin ./mvnw -DskipTests compile
+BUILD SUCCESS; finished at 2026-08-22T15:59:16+07:00.
+
+JAVA_HOME=/opt/homebrew/opt/openjdk@25 PATH=/opt/homebrew/opt/openjdk@25/bin:/usr/bin:/bin ./mvnw -DskipTests -Ddoclint=all javadoc:javadoc
+BUILD SUCCESS; finished at 2026-08-22T15:59:16+07:00.
+
+git diff --check
+PASS
+```
+
 ## Branch-wide suite and static gates
 
 ```text
-env MAVEN_OPTS='-XX:+EnableDynamicAgentLoading' JAVA_HOME=/opt/homebrew/opt/openjdk@25 PATH=/opt/homebrew/opt/openjdk@25/bin:/usr/bin:/bin ./mvnw test
-Tests run: 460, Failures: 0, Errors: 0, Skipped: 0
+JAVA_HOME=/opt/homebrew/opt/openjdk@25 PATH=/opt/homebrew/opt/openjdk@25/bin:/usr/bin:/bin DOCKER_HOST=unix:///Users/sechmachine/.orbstack/run/docker.sock ./mvnw test -DargLine='-javaagent:/Users/sechmachine/.m2/repository/net/bytebuddy/byte-buddy-agent/1.18.10/byte-buddy-agent-1.18.10.jar'
+Tests run: 479, Failures: 0, Errors: 0, Skipped: 0
 BUILD SUCCESS
-Finished at: 2026-08-22T15:26:55+07:00
+Finished at: 2026-08-22T16:09:25+07:00
 ```
 
 ```text
-env MAVEN_OPTS='-XX:+EnableDynamicAgentLoading' JAVA_HOME=/opt/homebrew/opt/openjdk@25 PATH=/opt/homebrew/opt/openjdk@25/bin:/usr/bin:/bin ./mvnw -DskipTests compile
+JAVA_HOME=/opt/homebrew/opt/openjdk@25 PATH=/opt/homebrew/opt/openjdk@25/bin:/usr/bin:/bin ./mvnw -DskipTests compile
 BUILD SUCCESS
 
-env MAVEN_OPTS='-XX:+EnableDynamicAgentLoading' JAVA_HOME=/opt/homebrew/opt/openjdk@25 PATH=/opt/homebrew/opt/openjdk@25/bin:/usr/bin:/bin ./mvnw -DskipTests -Ddoclint=all javadoc:javadoc
+JAVA_HOME=/opt/homebrew/opt/openjdk@25 PATH=/opt/homebrew/opt/openjdk@25/bin:/usr/bin:/bin ./mvnw -DskipTests -Ddoclint=all javadoc:javadoc
 BUILD SUCCESS
 
 git diff --check
@@ -160,4 +227,4 @@ PASS
 
 ## External-test boundaries
 
-This evidence does not prove browser rendering, production HTTPS/proxy behavior, reports/UI exports, account lifecycle services, Task-owned mutation internals beyond the existing Project transfer handoff, or a multi-node deployment. The schema remains V1-owned by Platform; this branch adds no migration or new table. The Project-owned scalar ID query uses the existing public Account eligibility service one ID at a time; a future batch boundary is not justified by this requirement. The versioned Task transfer producer contract is a pending cross-branch dependency and is deliberately not merged or claimed by this fix.
+This evidence does not prove browser rendering of the Reports/UI-owned hidden version inputs, production HTTPS/proxy behavior, reports/UI exports, account lifecycle services, Task-owned mutation internals beyond the public versioned transfer boundary, or a multi-node deployment. The schema remains V1-owned by Platform; this branch adds no migration or new table. The Project-owned scalar ID query uses the existing public Account eligibility service one ID at a time; a future batch boundary is not justified by this requirement. The exact reviewed Task producer `a6261eb0ccad46ee6eac028d7202b5c06967fe13` is merged at `1b3b1df843ed253e5a5fabbdf82d1c9af6e390cf`; Project does not import Task repositories/entities or edit the shared workflow fragment.
